[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "xethhung12_minio_common"
version = "0.0.2"
description = "A common library fro xethhung12_minio(download/upload)_file package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "minio>=7.1.15",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev/xethhung12_minio_common"
"Bug Tracker" = "https://github.com/xh-dev/xethhung12_minio_common/issues"
